# Hexavalent-Archive

./: LICENCE  README.md  SECURITY.md  args_linux.gn  args_windows.gn  hexavalent_helper.py  linux_args.gn  version_windows.txt  windows_args.gn
patches/: 0001-Vanadium-switch-to-fstack-protector-strong.patch  0001-switch-to-fstack-protector-strong.patch  0002-Vanadium-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0002-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0003-Vanadium-enable-ftrivial-auto-var-init-zero.patch  0003-enable-ftrivial-auto-var-init-zero.patch  0004-Vanadium-disable-broken-warning-for-auto-var-init.patch  0004-disable-broken-warning-for-auto-var-init.patch  0005-Vanadium-disable-seed-based-field-trials.patch  0005-disable-seed-based-field-trials.patch  0006-Vanadium-disable-navigation-error-correction-by-default.patch  0006-disable-navigation-error-correction-by-default.patch  0007-Vanadium-disable-network-prediction-by-default.patch  0007-disable-network-prediction-by-default.patch  0008-Vanadium-disable-hyperlink-auditing-by-default.patch  0008-disable-hyperlink-auditing-by-default.patch  0009-Vanadium-disable-showing-popular-sites-by-default.patch  0009-disable-showing-popular-sites-by-default.patch  0010-Vanadium-disable-article-suggestions-feature-by-default.patch  0010-disable-article-suggestions-feature-by-default.patch  0011-Vanadium-disable-prefetching-suggested-pages-by-default.patch  0011-disable-prefetching-suggested-pages-by-default.patch  0011-disable-sensors-access-by-default.patch  0012-Vanadium-disable-sensors-access-by-default.patch  0012-disable-sensors-access-by-default.patch  0012-disable-third-party-cookies-by-default.patch  0013-Vanadium-disable-third-party-cookies-by-default.patch  0013-disable-background-sync-by-default.patch  0013-disable-third-party-cookies-by-default.patch  0014-Vanadium-disable-background-sync-by-default.patch  0014-disable-background-sync-by-default.patch  0014-disable-payment-support-by-default.patch  0015-Vanadium-disable-payment-support-by-default.patch  0015-disable-media-router-media-remoting-by-default.patch  0015-disable-payment-support-by-default.patch  0016-Vanadium-disable-media-router-media-remoting-by-default.patch  0016-disable-media-router-by-default.patch  0016-disable-media-router-media-remoting-by-default.patch  0017-Vanadium-disable-media-router-by-default.patch  0017-disable-media-router-by-default.patch  (+112 more)
patches/linux/: 0001-Restrict-creation-of-dynamic-code.patch  (+2 more)
(+3 files in other folders)
